fix social icons when aligned right

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -787,6 +787,12 @@ ul.twitter {
     background-color: @color-swatch4;
 }
 
+.widget.profile .bk-profile-socialicons a {
+    text-decoration: none;
+    text-indent: 9999px;
+    white-space: nowrap;
+}
+
 /* A:HOVER ICONS */
 
 .widget.socialicons span.bk-socialicons-twitter a:hover,
